Corrected paper with the first half of Sayan's suggestions

--- a/scrap_I_might_need.tex
+++ b/scrap_I_might_need.tex
@@ -49,3 +49,11 @@ where $f_{BBN}$ is the present day frequency of gravitational waves that were th
 \begin{equation} \label{eq:11}
     \int_{f_{BBN}}^{\infty}\mbox{d}f \frac{1}{f} h^2\Omega_{GW,0}(f) \lesssim 1\times 10^{-6}
 \end{equation} 
+
+
+Thus, we see that the power spectrum takes on the form 
+\begin{equation}\label{eqn:18}
+    \begin{multlined}
+    \mathcal{P}(\omega_0)  = \frac{\omega_0 a_k^3 \omega_k}{k^2 a_0} P_{prim}(k)\ .
+    \end{multlined}
+\end{equation}
