--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,19 @@
 %\documentclass[prd,twocolumn,aps,psfig,showpacs,nofootinbib,nobibnotes,superscriptaddress,preprintnumbers,times]{revtex4}
 \documentclass[prd,twocolumn,aps,psfig,nofootinbib,nobibnotes,superscriptaddress,preprintnumbers,times]{revtex4-2}
 \setlength{\topmargin}{-14mm}
-\usepackage{graphicx,bm,color,hyperref,amsmath,amssymb, mathtools,subcaption, float,dblfloatfix}
+\usepackage{graphicx,bm,color,amsmath,amssymb, mathtools,subcaption,float,dblfloatfix}
 \graphicspath{{./fig/}}
 
+\usepackage[hidelinks]{hyperref}
+\hypersetup{
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = blue, %Colour for external hyperlinks
+  linkcolor    = red, %Colour of internal links
+  citecolor    = blue %Colour of citations
+}
+
 \def\red{\textcolor{red}}
-\def\blue{\textcolorFujita:2018}
+\def\blue{\textcolor{blue}}
 
 %|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 %             Customized Commands
@@ -407,6 +415,8 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \newcommand{\dneff}{\Delta N_{\rm eff}}
 \newcommand{\neffv}{N_{\rm eff}^{(\nu)}}
 
+\newcommand{\inv}{\rm inv}
+
 \usepackage{braket}
 
 \begin{document}
@@ -435,7 +445,7 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
 
 \begin{abstract}
-Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in 15-Year data set \cite{Agazie:2023}. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider time independent and time dependent models of massive gravity \cite{Fujita:2018,Gumrukcuoglu:2012}, and compare their energy spectra with the signals from the NANOGrav data. We then place bounds on the mass of the gravitons and bounds on the rate of inflation. We show that the stochastic background allows for the possibility of time dependent massive gravity model to explain the data, within 2 - 4 $\sigma$ deviation, but a suppression mechanism for high frequency modes has to be introduced to obey the BBN bounds. For the time independent model, we find that the lack of a peaked signature in the spectrum allows us to bring the mass bound to $m_g \lesssim 8.3 \GeV/c^2$, in agreement with previous work \cite{deRham:2017,Wang:2023, Wu:2023}.
+Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set \cite{Agazie:2023}. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider time independent and time dependent models of massive gravity \cite{Fujita:2018,Gumrukcuoglu:2012}, and compare their energy spectra with the signals from the NANOGrav data. We then place bounds on the mass of the gravitons and bounds on the rate of inflation. We show that the stochastic background allows for the possibility of time dependent massive gravity model to explain the data, within 2-4 $\sigma$ deviation, but a suppression mechanism for high frequency modes has to be introduced to obey the BBN bounds. For the time independent model, we find that the lack of a peaked signature in the spectrum allows us to bring the mass bound to $m_g \lesssim 8.3 \GeV/c^2$, in agreement with previous work \cite{deRham:2017,Wang:2023, Wu:2023}.
 \end{abstract}
 
 \maketitle
@@ -444,103 +454,107 @@ Convincing evidence of a stochastic gravitational wave background has been found
 Ever since the discovery of a stochastic gravitational wave background (SGWB) based on the data from 15 years of observation of pulsars by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) collaboration \cite{Agazie:2023}, there have been attempts to search for new physics in the data \cite{Afzal:2023}. General relativity (GR) is an extremely accurate theory for most of the things we observe, but there are things it cannot presently explain. Many alternate theories of gravity have been proposed to try to address this, including massive gravity (MG), first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. Massive gravity helps address the source of dark energy; why there is a late time acceleration of the universe at all. It would be quite remarkable if a simple\footnote{The modification by a non-zero graviton mass is actually much more difficult than at first glance, due to the Boulware-Deser ghost and other problems showing up for nonlinear formulations of MG which prevent the theory from reducing to GR in the massless limit, and only recently have they been addressed \cite{Hassan:2012a, Hassan:2012b}} modification to a spin-2 field is the explanation behind such a significant phenomenon. 
 
 In this paper, we will use the 15-year NANOGrav data set (hereafter NG15), to constrain two models of massive gravity: one where the mass is time-independent and one that where the mass is time independent, specifically one where the mass takes the form of a step-function of time. The former will be taken from Ref.\ \cite{Gumrukcuoglu:2012} (hereafter the Constant Mass (CM) model) and the latter will be taken from Ref.\ \cite{Fujita:2018} (hereafter the Step Function Mass (SFM) model). We will calculate the energy density of primordial gravitational waves created during or before inflation, at the present time, and compare them to the signals we observe in NG15. There are multiple lines of evidence that point to the existence of a SGWB, and while many believe the background is mainly due to binary systems of supermassive black holes dispersed throughout the universe, more exotic cosmological sources cannot be excluded  from consideration\cite{Agazie:2023}, including the possibility that the background is due to massive gravity. 
-    
+
 The more commonly studied time-independent model has the graviton with a constant, non-zero mass since at least a Planck time after the Big Bang, after the graviton coupled to the Higgs field. There have been bounds placed on the mass of the graviton in such a model \cite{deRham:2017,Wang:2023, Wu:2023}, using the initial Laser Interferometer Gravitational-Wave Observatory (LIGO) detections and NG15. We will take into account these mass bounds and place further bounds for this model, if they are to try to explain the NG15 signals.
 
 The goal of this paper is to show whether massive gravity, through the amplification of tensor modes of primordial gravitational waves that entered the cosmological horizon before the matter dominated era, is a plausible mechanism for generating the SGWB that we observe. 
 
-\section{Setup} 
-We start with defining the FLRW metric $g_{\mu\nu}$, which we write as
-\begin{equation}\label{eqn:-1}
+The paper is arranged as follows: in section \ref{sec:setup}, we introduce the two models and the assumptions we make about each. In section \ref{sec:energy}, we derive the energy densities of the two models and discuss their behavior. In section \ref{sec:results}, we compare the models to the signals detected by NANOGrav. In section \ref{sec:discussion}, we discuss the implications of our findings, summarize, and discuss future work. Throughout this paper, we use  (--,+,+,+) for the Minkowski metric and we use natural units and set $c = \hbar = k_B = 1$. We also set the present day Hubble parameter $H_0 = h_0\ 100 \km \s^{-1}\Mpc^{-1} = 67.66 \km \s^{-1}\Mpc^{-1}$ and the present day density parameters for radiation, matter, curvature, and dark energy $\{\Omega_r, \Omega_m, \Omega_k, \Omega_\Lambda\} = \{9.182\times10^{-5},0.3111,0,0.6889\}$ to match the latest \textit{Planck} 2018 TT, TE, EE + lowE + lensing + BAO data \cite{Planck:2020}.
+
+\section{Setup}\label{sec:setup}
+We start with defining the Friedman-Lema\^{\i}tre-Walker (FLRW) metric $g_{\mu\nu}$:
+\begin{equation}\label{eqn:metric}
     g_{\mu\nu}dx^{\mu} dx^{\nu} = -N^2(t)dt^2 +a^2(t)\left(\frac{dr}{1-Kr^2} + r^2 d\Omega^2\right)\ ,
 \end{equation}
-where $K$ is the spatial curvature, $d\Omega^2 = d\theta^2 + \sin^2\theta d\phi^2$, $N(t)$ is the lapse, and $a(t)$ is the scale factor. We then consider the general Lorentz-invariant action for a massive spin-2 field \cite{Blasi:2017}
-\begin{equation}\label{eqn:0}
-    S = S_{inv} + S_{m}
+where $K$ is the spatial curvature, $d\Omega^2 = d\theta^2 + \sin^2\theta d\phi^2$, $N(t)$ is the lapse, and $a(t)$ is the scale factor of the universe. In $d\Omega^2$, $\theta$ and $\phi$ are the polar and azimuthal angles in spherical coordinates, respectively. We then consider the general Lorentz-invariant action for a massive spin-2 field \cite{Blasi:2017}
+\begin{equation}\label{eqn:action}
+    S = S_{\inv} + S_{m}
 \end{equation}
 
-where $S_{inv}$ is the Einstein-Hilbert action defined by 
-\begin{equation} \label{eqn:1}
+\hspace{-1em}where $S_{\inv}$ is the invariant Einstein-Hilbert action defined by 
+\begin{equation} \label{eqn:action_inv}
      \begin{multlined}
-     S_{inv} = \int \text{d}^4x\Bigg(\frac{1}{2}h\partial^2h - h_{\mu \nu}\partial^\mu \partial^\nu h \\ - \frac{1}{2}h^{\mu\nu} \partial^2 h_{\mu\nu} + h^{\mu\nu}\partial_\nu \partial^\rho h_{\mu \rho} \Bigg) 
+     S_{\inv} = \int \text{d}^4x\Bigg(\frac{1}{2}h\partial^2h - h_{\mu \nu}\partial^\mu \partial^\nu h \\ - \frac{1}{2}h^{\mu\nu} \partial^2 h_{\mu\nu} + h^{\mu\nu}\partial_\nu \partial^\rho h_{\mu \rho} \Bigg) 
     \end{multlined}
 \end{equation} 
-where $h_{\mu\nu} = h_{\mu\nu}(\tau,{\bf x})$ is the metric perturbation and $\tau$ is the conformal time defined by $\tau \equiv \int \frac{N(t)}{a(t)}dt$, and $S_m$ is the massive action defined by 
-\begin{equation} \label{eqn:2}
+where $h_{\mu\nu} = h_{\mu\nu}(\tau,{\bf x})$ is the metric perturbation defined by $g_{\mu\nu} = \eta_{\mu\nu} + h_{\mu\nu}$ where $\eta_{\mu\nu}$ is the Minkowski metric, and $\tau$ is the conformal time defined by $\tau \equiv \int \frac{N(t)}{a(t)}dt$, and $S_m$ is the massive action defined by 
+\begin{equation} \label{eqn:action_m}
      \begin{multlined}
-     S_m = \int d^4x\frac{1}{2}(m_1^2 h^{\mu\nu}h_{\mu\nu}+ m_2^2 h^2).
+     S_m = \int d^4x\frac{1}{2}(m_1^2 h^{\mu\nu}h_{\mu\nu}+ m_2^2 h^2)\ ,
     \end{multlined}
 \end{equation}
-where $m_1$ and $m_2$ are the mass terms defined in Eq.\ 2.3 of \cite{Blasi:2017}. 
-We decompose the spatial component of the tensor perturbation $h_{ij}$ into its helicity states like Eq.\ 19.214 of \cite{Maggiore:v2} 
-\begin{equation}\label{eqn:3}
-    h_{ij}(\tau, {\bf k}) = \sum_{\lambda \in \{+, \times\}}e^\lambda_{ij}(\hat{\bf k})\gamma_k^\lambda(\tau, {\bf k})
+where $m_1$ and $m_2$ are the mass terms defined in Eq.\ 2.3 of Ref.\ \cite{Blasi:2017}. We have two mass terms because we are only considering the linear level. To get rid of the Boulware-Deser ghost degree of freedom, we make the Fierz-Pauli choice and set $m_1^2 = -m_2^2$. We will define $M_{GW}^2 = m_1^2$ as the mass of the graviton. We decompose the spatial component of the tensor perturbation $h_{ij}$ into its helicity states like Eq.\ 19.214 of Ref.\ \cite{Maggiore:v2} 
+\begin{equation}\label{eqn:decomp}
+    h_{ij}(\tau, {\bf k}) = \sum_{\lambda \in \{+, \times\}}e^\lambda_{ij}(\hat{\bf k})h_k^\lambda(\tau, {\bf k})
 \end{equation}
-where ${\bf k}$ is the comoving momentum, $e^\lambda_{ij}$ is the polarization tensor given in Eqs. 1.54-56 of \cite{Maggiore:v1}. 
-After we minimize the action from Eq.\ \ref{eqn:0} and take into account the helicity decomposition, we obtain the equation of motion (EoM) for $\gamma_{k}^\lambda$ (with the helicity modes suppressed since they have the same EoM)
-\begin{equation}\label{eqn:4}
-    \overline{\gamma}_k'' + \left(c_g^2(\tau) k^2 + a^2 M_{GW}^2 - \frac{a''}{a} + 2Kc_g^2(\tau)\right)\overline{\gamma}_k = 0
+where ${\bf k}$ is the comoving momentum, $e^\lambda_{ij}$ are the polarization tensors defined by 
+\begin{equation}\label{eqn:polarization}
+    e^+_{ij}(\hat{\bf k}) = \hat{\bf u}_i\hat{\bf u}_j - \hat{\bf v}_i\hat{\bf v}_j, \quad e^\times_{ij}(\hat{\bf k}) = \hat{\bf u}_i\hat{\bf v}_j - \hat{\bf v}_i\hat{\bf u}_j\ ,
 \end{equation}
-where $a$ is the scale factor, $\overline{\gamma}_k = a\gamma_k$ is defined for convenience, the primes ($\,'$) denote derivatives with respect to $\tau$, and $c_g(\tau)$ is the effective sound speed associated with GWs and may be dependent on time. For this paper, we will set $K = 0$ and $c_g = 1$. 
 
-\subsection{CM}
+\hspace{-1em}given in Eqs. 1.54-56 of Ref.\ \cite{Maggiore:v1}. Here, $\hat{\bf u}, \hat{\bf v}$ are the unit vectors orthogonal to the direction of propogation $\hat{\bf k}$ and to each other. After we minimize the action from Eq.\ \ref{eqn:action} and take into account the helicity decomposition in Eq.\ \ref{eqn:decomp}, we obtain the equation of motion for $h_k^\lambda$ (with the helicity modes suppressed since they have the same equation of motion)
+\begin{equation}\label{eqn:eom}
+    \overline{h}_k'' + \left(c_g^2(\tau) k^2 + a^2 M_{GW}^2 - \frac{a''}{a} + 2Kc_g^2(\tau)\right)\overline{h}_k = 0
+\end{equation}
+where $a$ is the scale factor, $\overline{h}_k = ah_k$ is defined for convenience, the primes ($\,'$) denote derivatives with respect to $\tau$, and $c_g(\tau)$ is the effective sound speed associated with GWs and may be dependent on time. For this paper, we will set $K = 0$ and $c_g = 1$\footnote{Refer to Sec.\ B2 of Ref.\ \cite{Gumrukcuoglu:2012} for consideration of non-zero $K$ and Sec.\ IV E4 of Ref.\ \cite{Gumrukcuoglu:2012} for consideration of general $c_g$.}.
+
+\subsection{Constant Mass Model}
 In the CM model, the graviton mass is much lower than the Hubble scale during inflation. This means that we don't need to consider the evolution of the GWs during inflation. The scale factor will be taken from solving
-\begin{equation}
+\begin{equation}\label{eqn:tau}
     \tau = \int \frac{da}{a^2H} = \int \frac{da}{a^2H_0\sqrt{\frac{\Omega_r}{a^4} + \frac{\Omega_m}{a^3}+ \frac{\Omega_k}{a^2}+\Omega_\Lambda}}
-    \label{eqn:5}
-\end{equation} where $H_0 = H(\tau_0) $ is the Hubble parameter at the present time and is $\approx 2.18\times 10^{-18}$ Hz, and $\Omega_r,$ $ \Omega_m,$ $ \Omega_k, $ $\Omega_\Lambda$ are the present-day density parameters of radiation, matter, curvature, and the cosmological constant respectively. We will take their values to be $8.5\times 10^{-5}$, 0.3, 0, and 0.7 respectively.
+\end{equation}
 
-We will take the mass function to be $M_{GW} = M_{GW,0}$. 
+We will take the mass in this model to be constant.
 
-\subsection{SFM}
+% in general, put Ref.s back in 
+
+\subsection{Step Function Mass Model}
 We consider graviton masses on the order of the Hubble scale, and so the evolution of the GWs during inflation will be important.
-The scale factor, as described in Eq.\ (4) of \cite{Fujita:2018}, is
-\begin{equation}
+The scale factor, as described in Eq.\ (4) of Ref.\ \cite{Fujita:2018}, is
+\begin{equation}\label{eqn:scale_fac}
     a(\tau) = 
     \begin{cases}
             -1(H_{\inf}\tau) & \tau < \tau_r \\
             a_r \tau/\tau_r & \tau > \tau_r \\
    \end{cases}
-   \label{eqn:6} 
 \end{equation}
-where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the Cosmic Microwave Background (CMB) exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $\tau_r$ to be fixed in this discussion, while $H_{\inf}$ and $a_r$ may vary. The bounds on $H_{\inf}$ are discussed in \cite{Jiang:2017}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous. 
+where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the Cosmic Microwave Background exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $\tau_r$ to be fixed in this discussion, while $H_{\inf}$ and $a_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2017}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. % perhaps expalin more about this weird behavior of the conformal time during inflation 
 \begin{figure}[h]
 \includegraphics[scale=0.65]{fig/fig0.pdf}
-\caption{A schematic of the real part of the mode function $\overline{\gamma}_k(\tau)$. There is a gap in the domain of the conformal time from $-\tau_r$ to $\tau_r$, but the mode function and its first derivative remains continuous in that domain. This is a numerical solution to the differential equation in Eq.\ \ref{eqn:4}, and the exact values for the parameters are detailed in the code \cite{GH}}
+\caption{Evolution of the real part of $\overline{h}_k(\tau)$. There is a gap in the domain of the conformal time from $-\tau_r$ to $\tau_r$, but $\overline{h}_k(\tau)$ and $\overline{h}_k'(\tau)$ remain continuous. This is a numerical solution to Eq.\ \ref{eqn:eom}, and the exact values for the parameters are detailed in the code \cite{GH}.}
 \label{fig:mode}
 \end{figure}
 
-Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing  the discontinuity in the conformal time. The behavior in the 3 regions of $\tau$ are discussed in detail in \cite{Fujita:2018}.
-We will use the mass function from Eq.\ 5 of \cite{Fujita:2018}
-\begin{equation}
+Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing  the discontinuity in the conformal time. The behavior in the three regions of $\tau$ are discussed in detail in Ref.\ \cite{Fujita:2018}.
+We will use the mass function from Eq.\ 5 of Ref.\ \cite{Fujita:2018}
+\begin{equation}\label{eqn:mass_case}
     M_{GW}(\tau) = 
     \begin{cases}
             m & \tau < \tau_m \\
             0 & \tau > \tau_m \\
    \end{cases}
-   \label{eqn:7}
 \end{equation} 
-where $\tau_m$ is some conformal time during the radiation dominated era when the mass instantaneously drops to 0. For more discussion about why the time is chosen to be in the radiation dominated era, refer to footnote 2 of \cite{Fujita:2018}. 
+where $\tau_m$ is some conformal time during the radiation dominated era when the mass instantaneously drops to 0. For more discussion about why the time is chosen to be in the radiation dominated era, refer to Footnote 2 of Ref.\ \cite{Fujita:2018}. 
 
-\section{Energy Density}
+\section{Energy Density of gravitational waves}\label{sec:energy}
 When we study models of gravitation, we often want to know how sub-horizon GWs from the primordial era are influenced. The energy density spectrum of these GWs at the present time as a function of frequency is perhaps the most practical way to observe the effects of beyond-GR theories. We want to look at the energy fraction of the GWs per logarithmic interval of k at the current time. We have the following definition for the energy density 
-\begin{equation}\label{eqn:8}
+\begin{equation}\label{eqn:omega_sfm}
     \Omega_{GW} = \frac{1}{\rho_c}\frac{d \rho_{GW}} {d \log{k}}
 \end{equation}
-where $\rho_c = \frac{3H^2}{8\pi G}$ is the critical density, and we note that the derivative isn't literally with respect to $\log k$ but is notationally representing the spectral density of $\rho_{GW}$ (see footnote 65 of \cite{Maggiore:v1}). Our energy density today is defined in terms of the primordial tensor power spectrum $\mathcal{P}_0(f)$ as detailed in Eq.\ 19.288 of \cite{Maggiore:v2}
-\begin{equation}\label{eqn:9}
+where $\rho_c = \frac{3H^2}{8\pi G}$ is the critical density, and we note that the derivative with respect to $\log k$ is a notational way of representing the spectral density of $\rho_{GW}$ (see Footnote 65 of Ref.\ \cite{Maggiore:v1}). Our energy density today is defined in terms of the primordial tensor power spectrum $\mathcal{P}_0(f)$ as detailed in Eq.\ 19.288 of Ref.\ \cite{Maggiore:v2}
+\begin{equation}\label{eqn:omega_0_sfm}
     \Omega_{GW,0}(f) = \frac{\pi^2}{3a_0^2H_0^2}f^2 \mathcal{P}_0(f)
 \end{equation}
 where $a_0 = a(\tau_0) = 1$. We will find the power spectrum in MG for both models by finding the form of the enhancement factor that will amplify the GR power spectrum using different approaches.  
-\subsection{CM}
-The EoM from Eq.\ \ref{eqn:5} yields the dispersion relation
-\begin{equation}\label{eqn:10}
+\subsection{Energy density of the Constant mass model}
+Eq.\ \ref{eqn:eom} yields the dispersion relation
+\begin{equation}\label{eqn:disp}
     \omega^2 = \frac{k^2}{a^2} + M_{GW}^2\ .
 \end{equation}
- For a given mode, if $\omega^2 \gg H^2$, where $H(a)$ is the Hubble parameter, then it is sub-horizon and if $\omega^2 \ll H^2$, then it is super-horizon. A sub-horizon mode will decay with time, and a super-horizon mode will remain fixed since the mode is "frozen" while it is outside the horizon. This is characterized by the equality  
- \begin{equation}\label{eqn:11}
+ For a given mode, if $\omega^2 \gg H^2$, where $H(a)$ is the Hubble parameter, then it is a sub-horizon mode and if $\omega^2 \ll H^2$, then it is a super-horizon mode. A sub-horizon mode will decay with time, and a super-horizon mode will remain fixed since the mode is ``frozen" while it is outside the horizon. This is characterized by the equality  
+ \begin{equation}\label{eqn:om_H}
      \omega^2(\tau_k) = H^2(\tau_k)
- \end{equation} where $\tau_k$ is the conformal time at which the mode reenters the horizon for a particular $k$. The scale factor for which is occurs at is notated as $a_k$. In the case of a massless graviton, i.e. the GR case, we have that $\omega = \frac{k}{a}$ and the scale factor for which $\omega(a) = H(a)$ is denoted as $a_{k}^{GR}$ (and similarly with the other parameters $\tau_k^{GR}$).
+ \end{equation} where $\tau_k$ is the conformal time at which the mode reenters the horizon for a particular $k$. The scale factor for which is occurs at is notated as $a_k$. In the case of a massless graviton, i.e. the GR case, we have that $\omega = \frac{k}{a}$ and the scale factor for which $\omega(a) = H(a)$ is denoted as $a_{k}^{GR}$.
 
 Ref.\ \cite{Gumrukcuoglu:2012} defines the power spectrum in Eq.\ 39
 \begin{equation}\label{eqn:12}
@@ -561,48 +575,30 @@ where $S$ is defined as
 and where $\omega_k = \sqrt{(k/a_k)^2 + M_{GW}^2}$. $\mathcal{P}_{prim}(k)$ is the primordial power spectrum defined as 
 \begin{equation}\label{eqn:16}
     \mathcal{P}_{prim}(k) \equiv \frac{2k^3}{\pi^2}A^2(k)
-\end{equation}and is normalized to the constant $2.43\times 10^{-10}$. $A(k)$ is the amplitude of the mode at the time of its generation defined as $A(k) = H_*/(M_{pl} k^{3/2})$ where $H_*$ is the Hubble expansion rate of the horizon exit during inflation and $M_{pl}$ is the reduced Planck mass defined by $M_{pl} = (8\pi G)^{-1/2}$. The GR spectrum is obtained through the WKB approximation in Eq.\ 44 of \cite{Gumrukcuoglu:2012}
+\end{equation}and is normalized to the constant $2.43\times 10^{-10}$. $A(k)$ is the amplitude of the mode at the time of its generation defined as $A(k) = H_*/(M_{pl} k^{3/2})$ where $H_*$ is the Hubble expansion rate of the horizon exit during inflation and $M_{pl}$ is the reduced Planck mass defined by $M_{pl} = (8\pi G)^{-1/2}$. The GR spectrum is obtained through the WKB approximation in Eq.\ 44 of Ref.\ \cite{Gumrukcuoglu:2012}
 \begin{equation}\label{eqn:17}
     \mathcal{P}_{GR}(\omega_0) =  \left( \frac{a_{k'}^{GR}}{a_0}\right)^2 \mathcal{P}_{prim}(k')\ .
 \end{equation}
-Thus, we see that the power spectrum takes on the form 
-\begin{equation}\label{eqn:18}
-    \begin{multlined}
-    \mathcal{P}(\omega_0)  = \frac{\omega_0 a_k^3 \omega_k}{k^2 a_0} P_{prim}(k)\ .
-    \end{multlined}
-\end{equation}
-It remains to actually compute $a_k$. Ref.\ \cite{Gumrukcuoglu:2012} uses approximations for different regimes of $k$, but we can try to compute it numerically from Eq.\ \ref{eqn:9}. In its expanded form, we are essentially trying to solve 
+It remains to actually compute $a_k$. Ref.\ \cite{Gumrukcuoglu:2012} uses approximations for different regimes of $k$, but we can try to compute it numerically from Eq.\ \ref{eqn:om_H}. In its expanded form, we are essentially trying to solve 
 \begin{equation}\label{eqn:19}
     \frac{k^2}{a_k^2} + M_{GW}^2 = H_0^2\left(\frac{\Omega_r}{a_k^4} + \frac{\Omega_m}{a_k^3}+ \frac{\Omega_k}{a_k^2}+\Omega_\Lambda\right) \ .
-\end{equation}This is a quartic in $a_k$ and therefore has an analytic solution, but in our experimentation, we discovered that using the analytical form, provided by Mathematica \cite{Mathematica:2023}, produces wildly inaccurate solutions due to the complexity of the expression and how the errors accumulate. Instead, we are able to use the Python package \texttt{SymPy} \cite{SymPy:2017} to calculate numerical approximations of the roots.
+\end{equation}This is a quartic in $a_k$ and therefore has an analytic solution, but in our experimentation, we discovered that using the analytical form produces inaccurate solutions due to the complexity of the expression and how the errors accumulate. Instead, we are able to use the Python package \texttt{SymPy} \cite{SymPy:2017} to calculate numerical approximations of the roots.
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \includegraphics[scale=.565]{fig/fig6.pdf}
 \caption{The energy density in the CM model due to a graviton mass of $2\pi 10^{-8}$ Hz. The peak is located at $10^{-8}$ Hz.}
 \label{fig:CM_omega}
 \end{figure}
 
-When we compute the energy density due to MG in this model, we observe no signal below the cutoff frequency, located at $f = 2\pi\times M_{GW}$. We also see a vertical peak that asymptotically approaches a flat spectrum in the log-log scale. The peak is estimated by Eq.\ 64 of \cite{Gumrukcuoglu:2012}.
+% discuss a bit more the figure, and put (top) M, ... etc 
 
-\subsection{SFM}
+When we compute the energy density due to MG in this model, we observe no signal below the cutoff frequency, located at $f = 2\pi\times M_{GW}$. We also see a vertical peak that asymptotically approaches a flat spectrum in the log-log scale. The peak is estimated by Eq.\ 64 of Ref. \cite{Gumrukcuoglu:2012}.
 
-The power spectrum is found to be approximately
+\subsection{Energy density in the Step Function Mass model}
+
+We take the power spectrum from Eq.\ 14 of Ref.\ \cite{Fujita:2018}
 \begin{equation}\label{eqn:20}
     \mathcal{P}(\tau, k) \sim \frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{GR}(\tau,k)\ , 
-\end{equation}
-where $\mathcal{P}_{GR}$ is the power spectrum of the massless tensor modes from inflation, and $\nu$ is defined by 
-\begin{equation}\label{eqn:21}
-    \nu = \sqrt{\frac{9}{4} - \frac{m^2}{H_{\inf}^2}}\ .
-\end{equation}
-This expression for the power spectrum is found by solving the equation of motion for the mode function and finding the expression for $\overline{\gamma}_k$ deep in the massless phase (see Sec.\ III(iii) of \cite{Fujita:2018} for more details). We want to make sure that we respect the Higuchi bound, which is determined by preventing the expression inside the square root from becoming negative: $M_{GW}/H_{\inf} \leq 3/2$. As for the GR power spectrum, we can approximate it by using the transfer function detailed in \cite{Kuroyanagi:2015}. To briefly recount, the power spectrum in the GR case is
-\begin{equation}\label{eqn:22}
-    \mathcal{P}_{GR} = \mathcal{P}^{prim}_{T} T^2_T(k)
-\end{equation}
-where $\mathcal{P}^{prim}_{T}$ is the primordial tensor power spectrum and $T_{T}$ is the transfer function describing the standard reheating scenario in which the universe had a short matter-dominated era after inflation before reheating ended. $\mathcal{P}^{prim}_{T}$ is defined 
-in Eq.\ 7 of \cite{Kuroyanagi:2015} as follows
-
-\begin{equation}\label{eqn:23}
-    \mathcal{P}_{T}^{prim}(k) = A_T(k_{ref})\left(\frac{k}{k_{ref}}\right)^{n_T}
 \end{equation}
 \begin{figure}[H]
 \begin{subfigure}{.5\textwidth}
@@ -623,12 +619,28 @@ in Eq.\ 7 of \cite{Kuroyanagi:2015} as follows
 \caption{We plot $\Omega_{GW,0}$ as a function of $f$ and $M, \tau_m, H_{\inf}$ from top to bottom. $f$ ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 2\times 10^8\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{1/2}$ Hz \cite{Fujita:2018}).} 
 \label{fig:contours}
 \end{figure}
-\hspace{-1em}where $A_T(k_{ref})$ is the amplitude at the reference scale,
+\hspace{-1em}where $\mathcal{P}_{GR}$ is the power spectrum of the massless tensor modes from inflation, and $\nu$ is defined by 
+\begin{equation}\label{eqn:21}
+    \nu = \sqrt{\frac{9}{4} - \frac{m^2}{H_{\inf}^2}}\ .
+\end{equation}
+This expression for the power spectrum is found by solving the equation of motion for the mode function and finding the expression for $\overline{\gamma}_k$ deep in the massless phase (see Sec.\ III(iii) of \cite{Fujita:2018} for more details). We want to make sure that we respect the Higuchi bound, which is determined by preventing the expression inside the square root from becoming negative: $M_{GW}/H_{\inf} \leq 3/2$. As for the GR power spectrum, we can approximate it by using the transfer function detailed in \cite{Kuroyanagi:2015}. To briefly recount, the power spectrum in the GR case is %talk more about higuchi bound
+\begin{equation}\label{eqn:22}
+    \mathcal{P}_{GR} = \mathcal{P}^{prim}_{T} T^2_T(k)
+\end{equation}
+where $\mathcal{P}^{prim}_{T}$ is the primordial tensor power spectrum and $T_{T}$ is the transfer function describing the standard reheating scenario in which the universe had a short matter-dominated era after inflation before reheating ended. $\mathcal{P}^{prim}_{T}$ is defined 
+in Eq.\ 7 of \cite{Kuroyanagi:2015} as follows
+
+\begin{equation}\label{eqn:23}
+    \mathcal{P}_{T}^{prim}(k) = A_T(k_{ref})\left(\frac{k}{k_{ref}}\right)^{n_T}
+\end{equation}
+where $A_T(k_{ref})$ is the amplitude at the reference scale,
+
+% maybe have 3 sigma or 1 sigma instead of 4 sigma 
 \onecolumngrid
 \begin{center}
 \begin{figure}
 \includegraphics[width=\textwidth]{fig/fig8.pdf} 
-\caption{GWB spectra produced by the CM model \cite{Gumrukcuoglu:2012} in the top plot and GWB spectra produced by the SFM model \cite{Fujita:2018} in the bottom plot. We show the $2\sigma$ and $4\sigma$ posterior medians for NG15, in darker and lighter orange respectively. The black dotted lines are the GWB spectrum produced by an astrophysical population of inspiraling SMBHBs with the parameters detailed in Eq.\ A1 of \cite{Afzal:2023}. Top plot (CM): red curve is the energy density for a graviton with the same mass as the upper bound found in \cite{Wang:2023}, the blue curve is the same but for \cite{Wu:2023}, and the green curve is the same but for the NG15 frequency limits. Bottom plot (SFM): blue curve is the GWB spectra fitted to the $2\sigma$ posterior and the red curve is fitted to the $4\sigma$ posterior.}
+\caption{GWB spectra produced by the CM model \cite{Gumrukcuoglu:2012} (top), GWB produced by the SFM model \cite{Fujita:2018} (bottom), and we show the $2\sigma$ and $4\sigma$ posterior medians for NG15, in darker and lighter orange respectively. The black dotted lines are the GWB spectrum produced by an astrophysical population of inspiraling SMBHBs with the parameters detailed in Eq.\ A1 of \cite{Afzal:2023}. In the top plot, the red curve is the energy density for a graviton with the same mass as the upper bound found in \cite{Wang:2023} and the blue curve is the same but for \cite{Wu:2023}, and the green curve is the same but for the NG15 frequency limits. In the bottom plot the blue curve is the GWB spectra fitted to the $2\sigma$ posterior and the red curve is fitted to the $4\sigma$ posterior.}
 \label{fig:GWB}
 \end{figure}
 \end{center}
@@ -648,25 +660,33 @@ In anticipation of our consideration of certain parameters in the next section, 
     \tau_m \lesssim 10^{10}\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{-2}\tau_r
 \end{equation}
 
-\section{Results}
+\section{Results}\label{sec:results}
 We now discuss the region of the parameter space in the two models that can potentially explain the signals from NG15. 
 
 \subsection{CM}
 
 The constraint on the mass is straightforward in the CM model. We expect a peaked signature in the energy density if the mass is a constant value, as seen in Fig.\ \ref{fig:CM_omega}. We can see that a peaked signature isn't present in the NG15 signal, so no graviton mass in the CM model can possibly explain the NG15 signal. Thus, if the graviton has a non-zero mass, the peak in the energy density of primordial gravitational waves must be below the lower range of the frequency of the NG15 signal. An upper bound based on this consideration is thus equal to $M_{GW} = 8.3\times10^{-33} \GeV/c^2$, since the lowest frequency in the signal is 2 nHz \cite{Agazie:2023}. This is in agreement with the state-of-the-art bounds from Ref.\ \cite{Wu:2023}, which has the upper bound at $M_{GW} = 8.2\times10^{-33} \GeV/c^2$, and from Ref.\ \cite{Wang:2023}, which has the upper bound at $M_{GW} = 8.6\times10^{-33} \GeV/c^2$, as shown in Fig.\ \ref{fig:GWB}.
 
-\subsection{SFM}
-
-The constraints we can place on the SFM model based on NG15 are done by considering the constraints we can place on the parameters $M_{GW}, H_{\inf},$ and $\tau_m$. Based on the contours in Fig.\ \ref{fig:contours}, we were able reproduce the NG15 signal with MG by varying the values for the parameters that lie within $2\sigma$ and $4\sigma$ of the power law posterior of the signal. We assumed that $\tau_m$ took on its maximum value allowed by the BBN bounds, from Eq.\ \ref{eqn:26}, because increasing $\tau_m$ causes the energy density to uniformly increase, which gets us closer to the signal by being as far as we can from violating the Higuchi bound. This came out to be $M_{GW} = 1.14H_{\inf}$ and $H_{\inf} = 500 \GeV$ to stay within $2\sigma$ of the posterior and $M_{GW} = 1.25H_{\inf}$ and $H_{\inf} = 5 \GeV$ to stay within $4\sigma$ of the posterior. 
 \begin{figure}[h]
 \includegraphics[width=\linewidth]{fig/fig7.pdf}
 \caption{The energy densities in the bottom plot of Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}.}
 \label{fig:bound}
 \end{figure}
-\section{Discussion}
+
+\subsection{SFM}
+
+The constraints we can place on the SFM model based on NG15 are done by considering the constraints we can place on the parameters $M_{GW}, H_{\inf},$ and $\tau_m$. Based on the contours in Fig.\ \ref{fig:contours}, we were able reproduce the NG15 signal with MG by varying the values for the parameters that lie within $2\sigma$ and $4\sigma$ of the power law posterior of the signal. We assumed that $\tau_m$ took on its maximum value allowed by the BBN bounds, from Eq.\ \ref{eqn:26}, because increasing $\tau_m$ causes the energy density to uniformly increase, which gets us closer to the signal by being as far as we can from violating the Higuchi bound. This came out to be $M_{GW} = 1.14H_{\inf}$ and $H_{\inf} = 500 \GeV$ to stay within $2\sigma$ of the posterior and $M_{GW} = 1.25H_{\inf}$ and $H_{\inf} = 5 \GeV$ to stay within $4\sigma$ of the posterior. 
+
+%\vspace{-1em}
+
+\section{Discussion}\label{sec:discussion}
+
+% in discussion make sure to use full words not acronyms 
 In this paper, we discussed how the CM and SFM models of MG can be constrained by NG15. We note that the selection of the parameters in the SFM model leads to energy densities that violate the BBN bound for higher frequencies; in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. Something analogous to the damping of the energy density from the free-streaming neutrinos \cite{Weinberg:2004} could be behind such a suppression necessary to respect the BBN bound. 
 
 GW observation has mostly ruled out the possibility of gravitons with a very low but nonzero mass, since the expectation that a peak could be present for lower and lower frequencies is becoming more slim, albeit still possible. Therefore, the more plausible possibility of MG is the scenario in which the graviton mass is a non-constant function of time. We have only considered a step function as the time dependent function, but more complex functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field itself. It may be interesting to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time dependent behavior beyond a step function.
+
+%what are the limiations of our paper, how do you plan on generalizing this to future work
 
 \vspace{2mm}
 {\bf Data availability}---Source code to reproduce all of the figures in this paper is located in \cite{GH}. 
