Updates from Overleaf

--- a/refs.bib
+++ b/refs.bib
@@ -327,3 +327,30 @@ abstract = {There are several common conventions in use by the gravitational-wav
    pages={A6} 
 }
 
+@article{DeFelice:2016,
+   title={Minimal theory of massive gravity},
+   volume={752},
+   ISSN={0370-2693},
+   url={http://dx.doi.org/10.1016/j.physletb.2015.11.050},
+   DOI={10.1016/j.physletb.2015.11.050},
+   journal={Physics Letters B},
+   publisher={Elsevier BV},
+   author={De Felice, Antonio and Mukohyama, Shinji},
+   year={2016},
+   month=jan, pages={302–305} 
+}
+
+@article{Felice:2016,
+   title={Phenomenology in minimal theory of massive gravity},
+   volume={2016},
+   ISSN={1475-7516},
+   url={http://dx.doi.org/10.1088/1475-7516/2016/04/028},
+   DOI={10.1088/1475-7516/2016/04/028},
+   number={04},
+   journal={Journal of Cosmology and Astroparticle Physics},
+   publisher={IOP Publishing},
+   author={Felice, Antonio De and Mukohyama, Shinji},
+   year={2016},
+   month=apr, pages={028–028} 
+}
+
