--- a/scrap_I_might_need.tex
+++ b/scrap_I_might_need.tex
@@ -1,5 +1,8 @@
 the time for which the graviton mass transitions from a nonzero value to zero.
 
+There are multiple lines of evidence that point to the existence of a SGWB, and while many believe the background is mainly due to binary systems of supermassive black holes dispersed throughout the universe, more exotic cosmological sources cannot be excluded from consideration\cite{Agazie:2023}, including the possibility that the background is due to massive gravity;s amplification of primordial gravitational waves. 
+
+
 The two models we will be considering have different functions for the mass and scale factor, as described in their respective papers \cite{Gumrukcuoglu:2012, Fujita:2018}. 
 
 \begin{equation}\label{eqn:1}
